[gd_scene load_steps=6 format=2]

[ext_resource path="res://Puppets/PuppetGeneric/PuppetRigidBody.gd" type="Script" id=1]
[ext_resource path="res://gui/ProgressBar/Graphics/blueBar.png" type="Texture" id=2]
[ext_resource path="res://gui/ProgressBar/Graphics/blueBarBackground.png" type="Texture" id=3]
[ext_resource path="res://Puppets/PuppetGeneric/graphics/brickSpecial01.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1
bounce = 1.0
absorbent = true

[node name="Puppet" type="RigidBody2D"]
input_pickable = true
mass = 100.0
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -32.9566, -32.6095, 31.4495, -32.9432, 32.1169, 23.1201, 29.1135, 29.1269, 22.4393, 31.7966, -21.6104, 31.4629, -28.2847, 28.4595, -31.9555, 22.4527 )

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -29.3326
margin_top = -44.3224
margin_right = 29.6674
margin_bottom = -37.3224
value = 33.0
rounded = true
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_shape_entered" from="." to="." method="_on_Puppet_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_Puppet_body_shape_exited"]
[connection signal="input_event" from="." to="." method="_on_Puppet_input_event"]
